# database_search

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  mypy.ini  poetry.toml  pyproject.toml
app/: main.py
app/api/: api.py
app/api/endpoints/: chat.py  embedd_database.py
app/chains/: create_sql_query_chain.py  example_chain.py  main_chain.py  ner_chain.py  sql_guardrail_chain.py  validate_info_chain.py
app/database/: database_connection.py
app/databases/neo4j_database/: insert_data.py  neo4j_database.py  service.py
app/databases/postgres_database/: database_connection.py  insert_data.py  service.py
app/databases/qdrant_database/: insert_data.py  qdrant.py
app/frontend/: frontend.py
app/models/: database.py  llm_model.py  outputs.py
app/models/enums/: postgres_data_types.py
app/neo4j_database/: insert_data.py  neo4j_database.py
app/ner_prompt/: ner_prompt.py
app/openai/: chat.py  embedding.py
app/sql_database/: database_connection.py  insert_data.py
app/templates/: chat_output_template.py  create_sql_prompt.py  guardrails.py  ner_prompt.py  sql_prompt.py  validate_info_prompt.py
app/utils/: database_schema_transfer.py  formatting.py  json_extraction.py  populate_data.py
app/vectorstore/: chroma_vs.py  insert_data.py  qdrant.py
scripts/: init_neo4j.sh
