[tool.poetry]
name = "database-search"
version = "0.1.0"
description = "Searching database wiht LLMs"
authors = ["nnikolovskiii <nikolovski.nikola42@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-experimental = "^0.0.64"
langchain-openai = "^0.1.20"
pydantic = "^2.8.2"
chromadb = "^0.5.5"
langchain-core = "^0.2.28"
qdrant-client = "^1.10.1"
psycopg2-binary = "^2.9.9"
faker = "^26.1.0"
tqdm = "^4.66.5"
neo4j = "^5.23.1"
gradio = "^4.40.0"
streamlit = "^1.37.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
