[tool.poetry]
name = "database-search"
version = "0.1.0"
description = "Searching database wiht LLMs"
authors = ["dpavlovski <dimitar.pavlovski12@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.13"
langchain-community = "^0.2.12"
langchain-experimental = "^0.0.64"
langchain-openai = "^0.1.22"
pydantic = "^2.8.2"
chromadb = "^0.5.5"
langchain-core = "^0.2.29"
qdrant-client = "^1.11.0"
psycopg2-binary = "^2.9.9"
tqdm = "^4.66.5"
neo4j = "^5.23.1"
streamlit = "^1.37.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
